# web-apps

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-sources.json  cef-rs-cargo-sources.json  dev.heppen.webapps.json  io.github.elevenhsoft.WebApps.json  justfile  org.cosmic.Wam.json  org.cosmic.Wam.yml  packaging.just
.devcontainer/: Containerfile  devcontainer.json
.devenv/: profile  run
.github/: FUNDING.yml
builddir/files/share/icons/Pop/: icon-theme.cache
cef/: chrome-sandbox  libvulkan.so.1
data/: io.github.elevenhsoft.WebApps.desktop  io.github.elevenhsoft.WebApps.metainfo.xml  org.cosmic.Wam.desktop  org.cosmic.Wam.metainfo.xml
data/runtime/firefox/profile/: user.js
data/runtime/firefox/profile/chrome/: userChrome.css
data/runtime/zen-browser/profile/: user.js
data/runtime/zen-browser/profile/chrome/: userChrome.css
i18n/bg/: webapps.ftl
i18n/en/: webapps.ftl
i18n/eo/: webapps.ftl
i18n/es/: webapps.ftl
i18n/fr/: webapps.ftl
i18n/it/: webapps.ftl
i18n/nl/: webapps.ftl
i18n/pl/: webapps.ftl
i18n/pt-BR/: webapps.ftl
i18n/rs/: webapps.ftl
i18n/sv/: webapps.ftl
i18n/tr/: webapps.ftl
i18n/uk/: webapps.ftl
res/: dev.heppen.webapps.desktop  dev.heppen.webapps.metainfo.xml  dev.heppen.webapps.xml  io.github.elevenhsoft.WebApps.desktop  io.github.elevenhsoft.WebApps.metainfo.xml
resources/: dev.heppen.webapps.desktop  dev.heppen.webapps.metainfo.xml
resources/scripts/: icon-installer.sh
scripts/: icon-installer.sh  install.sh
src/: browser.rs  common.rs  config.rs  creator.rs  favicon.rs  gui.rs  home_screen.rs  icon_cache.rs  iconpicker.rs  icons_installator.rs  launcher.rs  lib.rs  localize.rs  main.rs  supported_browsers.rs  themes.rs  wam.rs  warning.rs  wrap.rs
src/pages/: creator.rs  editor.rs  home_screen.rs  iconpicker.rs  icons_installator.rs  installator.rs  mod.rs
