[package]
name = "webapps"
version = "2.0.1"
edition = "2024"
description = "Web applications at your fingertips"
authors = ["hepp3n"]
license = "GPL-3.0-only"
repository = "https://github.com/cosmic-utils/web-apps"
default-run = "dev-heppen-webapps"

[[bin]]
name = "dev-heppen-webapps"
path = "src/bin/dev-heppen-webapps/main.rs"

[[bin]]
name = "dev-heppen-webapps-webview"
path = "src/bin/webview.rs"

[dependencies]
# dynamic launcher portal
ashpd = { version = "0.12", features = ["wayland"] }
# for webview
gtk = "0.18.2"
tao = "0.34.3"
wry = "0.53.3"

clap = { version = "4", features = ["derive"] }
dirs = "6"
i18n-embed-fl = "0.10.0"
i18n-embed = { version = "0.16.0", features = [
  "fluent-system",
  "desktop-requester",
] }
once_cell = "1.21.3"
open = "5.3.2"
rand = "0.9.2"
ron = "0.11.0"
rust-embed = "8.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27.2"
strum_macros = "0.27.2"
svg = "0.18.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "std",
  "fmt",
  "env-filter",
] }
url = "2.5.7"
urlencoding = "2.1.3"
usvg = "0.45.1"
walkdir = "2.5.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = ["a11y", "dbus-config", "winit", "multi-window", "wayland", "tokio"]
