[package]
name = "webapps"
version = "3.0.0"
edition = "2024"
description = "Web applications at your fingertips"
authors = ["hepp3n"]
license = "GPL-3.0-only"
repository = "https://github.com/cosmic-utils/web-apps"
default-run = "dev-heppen-webapps"

[[bin]]
name = "dev-heppen-webapps"
path = "src/bin/dev-heppen-webapps/main.rs"

[[bin]]
name = "dev-heppen-webapps-webview"
path = "src/bin/webview/main.rs"

[[bin]]
name = "dev-heppen-webapps-webview-helper"
path = "src/bin/webview/helper.rs"

[dependencies]
# dynamic launcher portal
ashpd = { version = "0.13", features = [
    "wayland",
    "file_chooser",
    "dynamic_launcher",
] }
# for webview
cef = { version = "145", features = ["linux-x11", "build-util"] }
x11-dl = "2.21.0"

anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
i18n-embed-fl = "0.10"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
once_cell = "1.21"
open = "5.3"
rand = "0.10"
ron = "0.12"
rust-embed = "8.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.28"
strum_macros = "0.28"
svg = "0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }
url = "2.5"
urlencoding = "2.1"
usvg = "0.47"
walkdir = "2.5"

[features]
default = ["linux-x11"]
linux-x11 = ["cef/linux-x11"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = ["a11y", "dbus-config", "winit", "multi-window", "wayland", "tokio"]
